# django-polls

./: .gitignore  pyproject.toml
django_polls/: settings.py  urls.py
polls/: models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
