[tool.poetry]
name = "django-polls"
version = "0.1.0"
description = ""
authors = ["carlosporta <cmaciasporta@gmail.com>"]
readme = "README.md"
packages = [{include = "django_polls"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
